--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cookie-parser": "^1.4.4",
     "css-loader": "2.1.1",
     "d3": "^5.9.7",
     "dotenv": "6.2.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
+    "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -45,6 +48,7 @@
     "mobx-react": "^6.1.1",
     "mobx-router": "0.0.20",
     "moment": "^2.24.0",
+    "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
