--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mobx-react": "^6.1.1",
     "mobx-router": "0.0.20",
     "moment": "^2.24.0",
+    "mongoose": "^5.6.11",
     "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
